--- a/infra/Pulumi.yaml
+++ b/infra/Pulumi.yaml
@@ -2,5 +2,6 @@ name: AgenticArchitect-Infra
 runtime:
   name: python
   options:
-    virtualenv: ../.venv
+    virtualenv: ""
+    #virtualenv: ../.venv
 description: Infrastructure-as-Code for TheArchitect VPS Deployment
