feat: improve AgenticArchitect core stability and infra

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -47,6 +47,7 @@
                 "ms-python.python",
                 "ms-python.debugpy",
                 "charliermarsh.ruff",
+                "ms-pyright.pyright",
                 "ms-toolsai.jupyter",
                 "ms-toolsai.jupyter-renderers",
                 "marimo-team.vscode-marimo", 
